--- a/src/style/layouts/_view.scss
+++ b/src/style/layouts/_view.scss
@@ -3,5 +3,5 @@
   display: flex;
   flex-direction: column;
   margin-top: -8rem;
-  z-index: 10;
+  z-index: 300;
 }
